# bitshift-bytestring

./: README.md  bitshift-bytestring.cabal  bitshift.cabal  stack.yaml
src/: Main.hs
src/Data/ByteString/: BitShift.hs
src/Data/ByteString/BitShift/: Internal.hs
test/: Demo.hs  Main.hs  QuickCheck.hs
