cabal-version:       3.0
-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                bitshift-bytestring
version:             0.0.1

author:              Stefan Klinger
maintainer:          git@stefan-klinger.de

category:            experimantal
synopsis:            bit-shifting for entire byte-strings

license-file:        LICENSE

extra-source-files:  README.md



common shared
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ScopedTypeVariables
                     , LambdaCase

common devel
  import:              shared
  ghc-options:         -Wall
                       -Wwarn=deprecations
                       -Wno-orphans
                       -Wwarn=name-shadowing

common production
  import:              shared
  ghc-options:         -Wall
                       -Werror
                       -Wwarn=missing-local-signatures
                       -Wwarn=missing-export-lists
                       -Wwarn=unused-top-binds
                       -Wwarn=deprecations
                       -Werror=unused-imports
                       -Wno-orphans
                       -Wwarn=name-shadowing

common chosen-properties
  import: devel



library
  import:              chosen-properties

  hs-source-dirs:      src

  exposed-modules:     Data.ByteString.BitShift

  build-depends:       base
                     , bytestring

test-suite test
  import:              chosen-properties

  type:                exitcode-stdio-1.0

  hs-source-dirs:      test
  main-is:             Main.hs

  build-depends:       base
                     , bytestring
                     , bitshift-bytestring
