cabal-version:       3.0

name:                bitshift-bytestring
version:             1.0.0

synopsis: bit-shifting for entire byte-strings

description: Extends bit-shifting from basic types (e.g., values of
  type `Word`) the entire byte strings (i.e., values of type
  `Data.ByteString.ByteString`).

category:            Data

license:             AGPL-3.0-or-later
license-file:        LICENSE
author:              Stefan Klinger <https://stefan-klinger.de/>
maintainer:          git@stefan-klinger.de
copyright:           © 2024 Stefan Klinger

package-url:         https://github.com/s5k6/bitshift-bytestring

extra-source-files:  stack.yaml, stack.yaml.lock
                   , README.md



common shared
  default-language:    Haskell2010

  default-extensions:  BangPatterns
                     , ScopedTypeVariables
                     , LambdaCase

  build-depends:       base >=4.18 && <4.19
                     , bytestring

common devel
  import:              shared

  ghc-options:         -Wall
                       -Wwarn=deprecations
                       -Wno-orphans
                       -Wwarn=name-shadowing

common production
  import:              shared

  ghc-options:         -Wall
                       -Wwarn=missing-local-signatures
                       -Wwarn=missing-export-lists
                       -Wwarn=unused-top-binds
                       -Wwarn=deprecations
                       -Werror=unused-imports
                       -Wno-orphans
                       -Wwarn=name-shadowing

common chosen-properties
  import: production



library
  import:              chosen-properties

  hs-source-dirs:      src

  exposed-modules:     Data.ByteString.BitShift


test-suite quickcheck
  import:              chosen-properties

  default-extensions:  TemplateHaskell
  type:                exitcode-stdio-1.0

  hs-source-dirs:      test
  main-is:             QuickCheck.hs

  build-depends:       bitshift-bytestring
                     , QuickCheck


test-suite demo
  import:              chosen-properties

  type:                exitcode-stdio-1.0

  hs-source-dirs:      test
  main-is:             Demo.hs

  build-depends:       bitshift-bytestring
