cabal-version:       3.0
-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                bitshift
version:             0.0.1

author:              Stefan Klinger
maintainer:          git@stefan-klinger.de

category:            experimantal
synopsis:            a toy haskell experiment

license-file:        LICENSE

extra-source-files:  README.md



common shared
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ScopedTypeVariables
                     , LambdaCase
                    -- , OverloadedStrings

common devel
  import:              shared
  ghc-options:         -Wall
                       -Wwarn=deprecations
                       -Wno-orphans
                       -Wwarn=name-shadowing
                       -dynamic

common production
  import:              shared
  ghc-options:         -Wall
                       -Werror
                       -Wwarn=missing-local-signatures
                       -Wwarn=missing-export-lists
                       -Wwarn=unused-top-binds
                       -Wwarn=deprecations
                       -Werror=unused-imports
                       -Wno-orphans
                       -Wwarn=name-shadowing
                       -dynamic



executable bitshift
  import:              devel

  hs-source-dirs:      src
  main-is:             Main.hs

  --other-modules:

  build-depends:       base
                    -- , attoparsec
                     , bytestring
                    -- , containers
                    -- , haskeline
                    -- , parsec
                    -- , robust-int
                    -- , shuntingYard
                    -- , text
